--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
     <div id="result-info" class="result-block none">
         <h1 class="title" id="result-title">asd</h1>
-        <button id="again">Again</button>
+        <button id="again" onclick="location.reload(); return false;">Again</button>
     </div>
     <div class="table">
         <table id="field" class="table none">
